feat(CheckIn): Add Student Check In API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,6 @@ jwt.refreshable-duration=36000
 #logging
 #logging.level.org.springframework=DEBUG
 logging.level.com.lilpo.attendance_support_upgrade=DEBUG
+#checkIn
+allowed.distance=100
 
